# task-pilot

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.out
.claude/: CLAUDE.md  manager.md
.claude/agents/: artifact-acceptance-tester.md  code-reviewer.md  design-reviewer.md  e2e-test-reviewer.md  instruction-evaluator.md  sdd-gap-analyzer.md  sdd-spec-reviewer.md
.claude/conventions/: documentation-quality.md  reference-docs.md  review-severity.md  routed-handoffs.md  sdd-doc-set.md  testing.md  traceability.md  typescript.md  ui-component-library.md
.claude/docs/: README.md  design-book.md  project_specification.md
.claude/manifesto/: 00_project_profile.md  01_initial_composition.md  02_review.md  03_capability_expansion.md  04_tool_adoption.md  IMPLEMENTATION.md  README.md
.claude/pipelines/: browser-verify.md  code-review.md  e2e-change.md  feature-change.md  instruction-change.md  instructions-review.md  od-design.md  od-to-code.md  (+6 more)
.manifesto/: 00_project_profile.md  01_initial_composition.md  02_review.md  03_capability_expansion.md  04_tool_adoption.md  IMPLEMENTATION.md  MANIFEST.md
.playwright/: cli.config.json
.taskpilot/: project.yaml
designs/: design.md  kanban-board.pen  shared-components-lib.pen
docs/: INDEX.md  architecture.md  design.md  idea.md  roadmap.md  taskpilot_concept.md  testing.md
web/: package-lock.json  package.json  playwright.browser-contract.config.ts  playwright.config.ts  playwright.functional.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+394 files in other folders)
