[project]
name = "taskpilot"
version = "0.0.0"
description = "Local-first, file-based task management. Markdown/YAML files are the source of truth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
taskpilot = "taskpilot.cli.app:app"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
